--- a/render.yml
+++ b/render.yml
@@ -17,8 +17,8 @@ services:
             value: /
           - key: FLASK_APP
             value: src/app.py
-          - key: FLASK_DEBUG
-            value: 0
+          - key: FLASK_ENV # Imported from Heroku app
+            value: production
           - key: DATABASE_URL # Render PostgreSQL database
             fromDatabase:
                 name: flask-rest-42170
